# send-json-bot-rs

./: .env.example  Cargo.toml
src/: main.rs
