[package]
name = "showjsonbot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
serde_json = "1.0.120"
serde = "1.0.204"
